# tdo-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  KICKOFF.md  Makefile  README.md  TASKS.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  tdo-demo.jsx  tdo_build_prompt_v2.md
.github/workflows/: deploy-app.yml  deploy-infra.yml  nightly-pipeline.yml  run-integration.yml  self-heal.yml
.hypothesis/constants/: 2a04c030741bf917  9e6c972a3a24829f  da39a3ee5e6b4b0d
alembic/versions/: 0001_initial_schema.py  0002_create_aad_users.py  0003_add_llm_description_fields.py  0004_expand_mvm_schema.py  0005_add_embedding_vector.py  0006_backfill_url_and_portal.py  0006_fix_statfin_portal_key.py  0007_backfill_undata_url.py  0008_merge_branches.py  0009_backfill_description.py  0010_unique_source_id_portal.py  0011_fix_worldbank_url.py  0012_fix_statfin_eurostat_oecd_urls.py  0012_fix_statfin_urls.py  0012z_alembic_fix.py  0013_fix_eurostat_oecd_worldbank_urls.py  0013_fix_eurostat_urls.py  0014_backfill_embedding_vec.py  0015_fix_dataset_url_formats.py  0016_fix_undata_urls.py  0017_fix_all_urls.py  0018_fix_eurostat_double_suffix.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: staticwebapp.config.json
frontend/src/: App.jsx
infra/: main.bicep  main.json
infra/modules/: acr.bicep  containerApps.bicep  database.bicep  functions.bicep  identities.bicep  keyvault.bicep  monitoring.bicep  network.bicep  (+1 more)
scripts/: check_links.py  status.sh
setup/: bootstrap.sh
tests/: test_adapters.py
(+37 files in other folders)
